--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "random": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "ostream": "cpp"
     }
 }
